# OKGraph

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md  environment.yml  pyproject.toml  readme.md  requirements.txt  run_graph_eval.py
base_knowledge/Aircraft/: aircraft_names.json  aircraft_names_addattris.json
base_knowledge/CUB/: CUB_names.json  CUB_names_addattris.json
base_knowledge/Caltech/: caltech101_names.json  caltech101_names_addattris.json
base_knowledge/Cars/: cars_names_addattris_yearhead.json  cars_names_yearhead.json
base_knowledge/Counter_animal/easy/: animal_atri_foreasy.json  animal_name.json
base_knowledge/Counter_animal/hard/: animal_atri_forhard.json  animal_atri_transformed_format_edit2forhard.json
base_knowledge/DTD/: dtd_names.json  dtd_names_addattris.json
base_knowledge/EuroSAT/: EuroSAT_names.json  EuroSATtest_names_addattris.json  EuroSATtest_names_addattris_2.json
base_knowledge/Flowers/: flower102_names.json  flower102_names_addattris.json
base_knowledge/Food101/: food101_names.json  food101_names_addattris.json
base_knowledge/Pets/: pets_names.json  pets_names_addattris.json  pets_names_addattris2.json
base_knowledge/SUN397/: Sun_names.json  Sun_names_addattris.json
base_knowledge/UCF101/: UCF101_names.json  UCF101_names_addattris_new.json
base_knowledge/image-net/imagenet-A/: ctpt-a-classnames-final.json  (+3 more)
scripts/: run.sh  run_eval.py
src/graph_eval/: __init__.py  buffers.py  config.py  data.py  eval.py  fast.py  knowledge_base.py  llm.py  metrics.py  slow.py
tests/: test_prompts.py
(+9 files in other folders)
